fix: removed overflow:hidden

--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body{
 
 html{
     font-size: 13px;
-    overflow: hidden;
 }
 
 .flex-col-center{
